--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ src: url(../fonts/OpenSans-Regular.ttf);
     float: left;
 }
 .header__logo{
-    background: url('../images/Logo.jpeg') no-repeat;
+    background: url('../images/logo1.png') no-repeat;
     float: left;
     width: 100%;
     height: 100%;
@@ -114,8 +114,8 @@ src: url(../fonts/OpenSans-Regular.ttf);
     overflow: hidden;
 } 
 .footer__logo{
-  width: 45%;
-padding-left: 23%;
+  width: 60%;
+padding-left: 10%;
 }
 .footer__rightDiv{
     width: 80%; 
@@ -166,7 +166,7 @@ padding-left: 23%;
     height: 12px;
 }
 .footer__business{
-    margin-top: 25px;
+    /*margin-top: 25px;*/
 }
 .footer__social-networks {
     padding-top: 0px;
@@ -222,7 +222,7 @@ padding-left: 23%;
 
 .banner{
 /*background-color: #e1f1ff;*/
-margin-bottom: 5%;
+margin-bottom: 2%;
 }
 .banner h1 {
 font-family: 'Bellefair', serif;
@@ -1677,6 +1677,33 @@ position: absolute;
     text-transform: uppercase;
     font-weight: bold;
 }
+.consult_banner__text1{
+      position: absolute;
+  top: 53%;
+  left: 21%;
+  transform: translate(-50%, -50%);
+  font-size: 35px;
+  font-weight: 500;
+  COLOR: #8e7164;
+}
+.consult_banner__button1{
+position: absolute;
+    top: 62%;
+    left: 19%;
+    transform: translate(-50%, -50%);
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
+    font-size: 0.875rem;
+    outline: none;
+    background-color: #e2aa33;
+    border-radius: 18px;
+    letter-spacing: 0.08313rem;
+    padding: 10px 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
 /*consult page ends from here*/
 
 
@@ -1754,11 +1781,108 @@ position: absolute;
 
 
 
+.bmr__header {
+        background-color: yellow;
+    display: inline-block;
+    width: 30%;
+    padding: 15px;
+}
+    
+}
+#height, #weight {
+    width: 150px;
+    height: 25px;
+    margin-top: 30px;
+}
 
+#weight-guides{
+    margin-left: 75px;
+    margin-top: 25px;
+}
 
+#results{
+    font-size: 35px;
+    margin-left: 90px;
+    margin-top: 20px;
+    color: blue;
+}
 
+.button{
+    width: 150px;
+    height: 35px;
+    margin-left: 90px;
+    margin-top: 25px;
+    border-radius: 5px;
+    border-style: none;
+    background-color: blue;
+    color: #fff;
+    font-size: 25px;
+}
 
-
-
+.h1{
+    padding-left: 15px;
+    padding-top: 25px;
+}
+.bmi__header{
+        display: inline-block;s
+     width: 85%;
+    padding: 15px;
+}
+.calculator{
+    padding: 40px;
+}
+.calculator__heading{
+font-size: 2.8rem;
+    color: #626262;
+    font-family: 'Bellefair', serif;
+    line-height: 3rem;
+    letter-spacing: -2px;
+    line-height: 3rem;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.calculator__content{
+    display: inline-flex;
+    width: 100%;
+}
+.calculator__first, .calculator__second, .calculator__third{
+    width: 30%;
+    font-size: 1.2rem;
+    color: #91969c;
+    line-height: 1.75rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 200;
+}
+#height1, #weight1, #height, #age, #exercise, #gender11, #age11, #weight11, #height11, #fat11, #bmi11{
+    outline: none;
+    padding-bottom: 10px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    border-bottom: 2px solid #32d6a9;
+    color: #626262;
+    padding-top: 4%;
+    font-size: 1.2rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 200;
+}
+.bmi__calculate, .bmr__calculate, .ideal__calculate, .rest__calculate{
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
+    font-size: 0.6875rem;
+    outline: none;
+    background-color: #32d6a9;
+    border-radius: 18px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    cursor: pointer;
+    padding: 8px 32px;
+    letter-spacing: 0.08313rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
 
 
