--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1827,19 +1827,17 @@ font-size: 2.8rem;
     letter-spacing: -2px;
     line-height: 3rem;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 5%;
 }
 .calculator__content{
     width: 100%;
 }
 .calculator__first, .calculator__second, .calculator__third{
-width: 27%;
     font-size: 1.2rem;
     color: #91969c;
     line-height: 1.75rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: 200;
-    float: left;
     padding: 2%;
 }
 #height1, #weight1, #height, #age, #exercise, #gender11, #age11, #weight11, #height11, #fat11, #bmi11{
@@ -1851,10 +1849,11 @@ width: 27%;
     width: 100%;
     border-bottom: 2px solid #32d6a9;
     color: #626262;
-    padding-top: 4%;
+    padding-top: 1s%;
     font-size: 1.2rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: 200;
+    margin-bottom: 15px;
 }
 .bmi__calculate, .bmr__calculate, .ideal__calculate, .rest__calculate{
     border: none;
@@ -1884,7 +1883,172 @@ width: 27%;
     margin: 0 auto;
     text-transform: uppercase;
     font-size: 1.75rem;
-    margin-bottom: 5%;
 }
 
 
+
+
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 45%;
+    height: 450px;
+    border-radius: 50px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ .lw {
+    width: 45%;
+    display: inline-block;
+    padding: 10%;
+}
+.calculators > div {
+    float: left;
+    width: 15%;
+    background-color: #fff;
+    margin-left: 5%;
+    cursor: pointer;
+}
+
+.water{
+float: left;
+    width: 15%;
+    background-color: #62d7a9;
+    margin-left: 5%;
+    cursor: pointer;
+    height: 90px;
+    margin-bottom: 5%;
+    border-radius: 50px;
+}
+.lw{
+    width: 25%;
+    display: inline-block;
+    padding: 8%;
+}
+
+
+
+/* The Modal (background) */
+.modal1 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content1 {
+  background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 45%;
+    height: 450px;
+    border-radius: 50px;
+}
+
+/* The Close Button */
+.close1 {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close1:hover,
+.close1:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
+
+/* The Modal (background) */
+.modal2 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content2 {
+  background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 45%;
+    height: 550px;
+    border-radius: 50px;
+}
+
+/* The Close Button */
+.close2 {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close2:hover,
+.close2:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#height11, .weight11{
+  /*  width: 45%;
+    float: left;*/
+}
+.weightunits, .heightunits{
+    display: none;
+}
